# claude-usage-monitor

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  SettingsPage.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: session.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/api/: claude.rs  claude_ai.rs  mod.rs
src-tauri/src/storage/: database.rs  keychain.rs
src/components/: CircularProgress.tsx  Settings.tsx  UsageCard.tsx
src/hooks/: useUsage.ts
